[package]
name = "bigtable"
version = "0.4.0"
authors = ["Drazen Urch <github@drazenur.ch>"]
description = "Lib for interfacing with Google BigTable Data API"
repository = "https://github.com/durch/rust-bigtable"
readme = "README.md"
keywords = ["Google", "Cloud", "BigTable", "Data", "API"]
license = "MIT"
documentation = "https://durch.github.io/rust-bigtable"

[lib]
name = "bigtable"
path = "src/lib.rs"

[dependencies]
protobuf = "1.0.24"
smpl_jwt = "0.2"
goauth = "0.2"
log = "0.3"
curl = "0.4"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
rustc-serialize = "0.3"
protobuf-json = "0.2.0"
