[package]
name = "bigtable"
version = "0.5.0"
authors = ["Drazen Urch <github@drazenur.ch>"]
description = "Lib for interfacing with Google BigTable Data API"
repository = "https://github.com/durch/rust-bigtable"
readme = "README.md"
keywords = ["Google", "Cloud", "BigTable", "Data", "API"]
license = "MIT"
documentation = "https://durch.github.io/rust-bigtable"
edition = "2018"
build = "build.rs"

[lib]
name = "bigtable"
path = "src/lib.rs"

[dependencies]
protobuf = "2.8.1"
smpl_jwt = "0.4"
goauth = "0.6"
log = "0.4.8"
curl = "0.4"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.44"
rustc-serialize = "0.3.24"
protobuf-json-temp = "0.3.0"

[build-dependencies]
protobuf-codegen-pure = "2.8.1"
