[package]
name = "bigtable"
version = "0.6.0"
authors = ["Drazen Urch <github@drazenur.ch>"]
description = "Lib for interfacing with Google BigTable Data API"
repository = "https://github.com/durch/rust-bigtable"
readme = "README.md"
keywords = ["Google", "Cloud", "BigTable", "Data", "API"]
license = "MIT"
documentation = "https://durch.github.io/rust-bigtable"
edition = "2018"
build = "build.rs"

[lib]
name = "bigtable"
path = "src/lib.rs"

[dependencies]
protobuf = "3.7"
protobuf-json-mapping = "3.7"
smpl_jwt = "0.9"
goauth = "0.17"
log = "0.4"
curl = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
base64 = "0.22"

[build-dependencies]
protobuf-codegen = "3.7"
